# Plant-Shutdown-Turnaround-Knapsack-Optimizer

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_optimizer.py
.github/workflows/: ci.yml
dashboard/: turnaround_dashboard.html
data/processed/: failure_history_clean.csv  failure_history_clean.parquet  optimized_schedule.csv  optimized_schedule.parquet  work_orders_clean.csv  work_orders_clean.parquet  work_orders_scored.csv  work_orders_scored.parquet
data/raw/: asset_master.csv  failure_history.csv  work_orders.csv
database/: turnaround.db
docs/: DATABASE_SCHEMA.md  DATA_DICTIONARY.md  METHODOLOGY.md
notebooks/: 01_data_exploration.ipynb  02_weibull_reliability_analysis.ipynb  03_optimization_walkthrough.ipynb
power_bi/: README.md  measures.dax
reports/: power_bi_export.xlsx
reports/audit_logs/: run_log_20260620_144646.json  run_log_20260620_144655.json  run_log_20260620_144659.json  run_log_20260624_013642.json  run_log_20260624_013646.json  run_log_20260624_013649.json  run_log_20260630_051912.json  run_log_20260630_051915.json  run_log_20260630_051919.json
src/: main.py
src/db/: connection.py  queries.py  schema.py  writer.py
src/erp/: connector.py  mock_api.py
src/etl/: extract.py  load.py  transform.py
src/modeling/: risk.py  weibull.py
src/optimization/: knapsack_model.py  solver.py
src/reporting/: dashboard.py  export.py
src/scenarios/: comparison.py  manager.py  runner.py
src/utils/: config.py  data_generator.py  helpers.py
tests/: test_dashboard.py  test_data_generator.py  test_db.py  test_erp.py  test_etl.py  test_export.py  test_helpers.py  test_load.py  test_optimizer.py  test_risk.py  test_scenarios.py  test_weibull.py
